<resources>
	<!-- Gratitude -->
	<string name="app_name">Gratitude</string>

	<!-- Gratitude - Entries -->
	<string name="gratitude_items_prefix">I am grateful for…</string>
	<string name="gratitude_items_empty_text">Enter what you are grateful for in the text input at the bottom</string>
	<string name="gratitude_entry_text_hint">What are you grateful for?</string>

	<!-- Settings -->
	<string name="settings">Settings</string>

	<!-- Settings - Reminders -->
	<string name="settings_reminders_category">Reminders</string>

	<!-- Settings - Reminders - Enabled -->
	<string name="settings_reminders_enabled_key">reminders_enabled</string>
	<string name="settings_reminders_enabled_default_value">true</string>
	<string name="settings_reminders_enabled_title">Remind me to be grateful</string>
	<string name="settings_reminders_enabled_on">You will be reminded to be grateful each day</string>
	<string name="settings_reminders_enabled_off">You are not receiving reminders to be grateful</string>

	<!-- Settings - Reminders - Time -->
	<string name="settings_reminders_time_key">reminders_time</string>
	<string name="settings_reminders_time_default_value">20:00</string>
	<string name="settings_reminders_time_title">Change reminder time</string>

	<!-- Settings - Security -->
	<string name="settings_security_category">Security</string>

	<!-- Settings - Security - Vault -->
	<string name="settings_security_vault_key">security_vault</string>
	<string name="settings_security_vault_default_value">true</string>
	<string name="settings_security_vault_title">Vault</string>
	<string name="settings_security_vault_on">Your gratitude journal is being protected</string>
	<string name="settings_security_vault_off">Your gratitude journal is not protected</string>

	<!-- Settings - Security - Backup -->
	<string name="settings_security_backup_enabled_key">security_backup</string>
	<string name="settings_security_backup_enabled_title">Backup data</string>
	<string name="settings_security_backup_enabled_on">Your data is being backed up</string>
	<string name="settings_security_backup_enabled_off">Your data is not backed up</string>

	<!-- Settings - Security - Export -->
	<string name="settings_security_export_key">security_export</string>
	<string name="settings_security_export_title">Export your data</string>

	<!-- Settings - Developer -->
	<string name="settings_developer_category">Developer</string>

	<!-- Settings - Developer - Email -->
	<string name="settings_developer_email_key">feedback_email</string>
	<string name="settings_developer_email_title">Email developer</string>

	<!-- Settings - Developer - Website -->
	<string name="settings_developer_website_key">developer_website</string>
	<string name="settings_developer_website_title">Visit developer\'s website</string>

	<!-- Settings - Developer - Donate -->
	<string name="settings_developer_donate_key">developer_donate</string>
	<string name="settings_developer_donate_title">Donate to developer</string>

	<!-- Settings - Time Preference -->
	<string name="settings_time_preference_button_positive">Set</string>
	<string name="settings_time_preference_button_negative">Cancel</string>

	<!-- Notifications - Channel -->
	<string name="reminder_notification_channel_name">Reminders</string>
	<string name="reminder_notification_channel_description">Reminds you when it\'s time to show some gratitude!</string>

	<!-- Notifications - Reminder -->
	<string name="reminder_notification_title">It\'s time to show some gratitude!</string>
	<string name="reminder_notification_text">What are you grateful for?</string>

	<!-- Notifications - Reminder - Reply -->
	<string name="reminder_notification_reply_action_label">Show gratitude now</string>
	<string name="reminder_notification_reply_action_text_hint">What are you grateful for?</string>

	<!-- Notifications - Reminder - Reply - Confirmation -->
	<string name="reminder_notification_reply_confirmation_title">Great job!</string>
	<string name="reminder_notification_reply_confirmation_text">Thanks for being grateful today!</string>

</resources>