<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/settings_reminders_category">

		<SwitchPreference
			android:defaultValue="@string/settings_reminders_enabled_default_value"
			android:key="@string/settings_reminders_enabled_key"
			android:summaryOff="@string/settings_reminders_enabled_off"
			android:summaryOn="@string/settings_reminders_enabled_on"
			android:title="@string/settings_reminders_enabled_title"/>

		<uk.co.jamiecruwys.gratitude.settings.TimePreference
			android:defaultValue="@string/settings_reminders_time_default_value"
			android:dependency="@string/settings_reminders_enabled_key"
			android:dialogLayout="@layout/preference_time"
			android:key="@string/settings_reminders_time_key"
			android:title="@string/settings_reminders_time_title"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings_security_category">

		<SwitchPreference
			android:defaultValue="@string/settings_security_vault_default_value"
			android:key="@string/settings_security_vault_key"
			android:summaryOff="@string/settings_security_vault_off"
			android:summaryOn="@string/settings_security_vault_on"
			android:title="@string/settings_security_vault_title"/>

		<SwitchPreference
			android:key="@string/settings_security_backup_enabled_key"
			android:summaryOff="@string/settings_security_backup_enabled_off"
			android:summaryOn="@string/settings_security_backup_enabled_on"
			android:title="@string/settings_security_backup_enabled_title"/>

		<Preference
			android:key="@string/settings_security_export_key"
			android:title="@string/settings_security_export_title"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings_developer_category">

		<Preference
			android:key="@string/settings_developer_email_key"
			android:title="@string/settings_developer_email_title"/>

		<Preference
			android:key="@string/settings_developer_website_key"
			android:title="@string/settings_developer_website_title"/>

		<Preference
			android:key="@string/settings_developer_donate_key"
			android:title="@string/settings_developer_donate_title"/>

	</PreferenceCategory>

</PreferenceScreen>